# darts

./: CMakeLists.txt  README.md  config.json  main.cpp
header/: Board.h  Config.h  Openvino.h  Output.h
source/: Board.cpp  Config.cpp  Openvino.cpp  Output.cpp
weights/: 2run_4s.xml  run_3.xml  run_4s.xml
